feat: implement priority-based geocoding service selection with fallback mechanism